--- a/MS傳授.html
+++ b/MS傳授.html
@@ -136,8 +136,8 @@
             { group: '曉之陣', job: '劍士', name: '劍豪', card: { function: '爆擊傷害+6%', tag: ['爆擊傷害'] }, skill: { name: '疾風傳授', function: '全屬+25、物/魔攻+15', tag: ['STR', 'INT', 'DEX', 'LUK', '全屬性', '物攻', '魔攻'] } },
             { group: '曉之陣', job: '法師', name: '陰陽師', card: { function: 'B傷+6%', tag: ['B傷'] }, skill: { name: '紫扇傳授', function: '總傷+10%', tag: ['總傷'] } },
 
-            { group: '江湖', job: '法師', name: '琳恩', card: { function: '無視+6%', tag: ['無視'] }, skill: { name: '氣魄', function: '攻擊BOSS怪物時B傷+4%。攻擊BOSS成功時額外+2%B傷，最多可以疊6層，重疊於每2秒發動一次，持續5秒(總共+16%B傷)', tag: ['B傷'] } },
-            { group: '江湖', job: '海盜', name: '墨玄', card: { function: '爆擊傷害+6%', tag: ['爆擊傷害'] }, skill: { name: '精靈集中', function: 'B傷+7%、爆擊機率+7%、HP/MP+4%', tag: ['B傷', '爆擊機率', 'HP', 'MP'] } },
+            { group: '江湖', job: '法師', name: '琳恩', card: { function: '無視+6%', tag: ['無視'] }, skill: { name: '精靈集中', function: 'B傷+7%、爆擊機率+7%、HP/MP+4%', tag: ['B傷', '爆擊機率', 'HP', 'MP'] } },
+            { group: '江湖', job: '海盜', name: '墨玄', card: { function: '爆擊傷害+6%', tag: ['爆擊傷害'] }, skill: { name: '氣魄', function: '攻擊BOSS怪物時B傷+4%。攻擊BOSS成功時額外+2%B傷，最多可以疊6層，重疊於每2秒發動一次，持續5秒(總共+16%B傷)', tag: ['B傷'] } },
         ];
         const App = {
             setup: () => new function () {
