--- a/MS傳授.html
+++ b/MS傳授.html
@@ -139,11 +139,12 @@
             { group: '江湖', job: '法師', name: '琳恩', card: { function: '無視+6%', tag: ['無視'] }, skill: { name: '守護神的保佑', function: 'B傷+7%、爆擊機率+7%、HP/MP+4%', tag: ['B傷', '爆擊機率', 'HP', 'MP'] } },
             { group: '江湖', job: '海盜', name: '墨玄', card: { function: '爆擊傷害+6%', tag: ['爆擊傷害'] }, skill: { name: '氣魄', function: '攻擊BOSS怪物時B傷+4%。攻擊BOSS成功時額外+2%B傷，最多可以疊6層，重疊於每2秒發動一次，持續5秒(總共+16%B傷)', tag: ['B傷'] } },
         ];
+        const hash = decodeURI(window.location.hash.replace('#', '')).split(',');
         const App = {
             setup: () => new function () {
                 this.data = data;
                 this.query = reactive({ card: [], skill: [] });
-                this.select = reactive({ card: [], skill: [] });
+                this.select = reactive({ card: [], skill: [...hash] });
                 this.tab = ref('all');
 
                 this.cardTags = computed(() => {
