--- a/pupuwolf.html
+++ b/pupuwolf.html
@@ -7,6 +7,6 @@
 </head>
 
 <body>
-    <iframe src="https://player.twitch.tv/?channel=pupuwolf" />
+    <iframe src="https://player.twitch.tv/?channel=pupuwolf&parent=huzenon.github.io" />
 </body>
 </html>
