--- a/pupuwolf.html
+++ b/pupuwolf.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>笨狼的羅雀後街</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #1a1a1a;
+            color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            overflow: hidden;
+        }
+    </style>
 </head>
-
 <body>
-    <iframe src="https://player.twitch.tv/?channel=pupuwolf&parent=huzenon.github.io" />
+    <div class="container">
+        <h1>笨狼的羅雀後街</h1>
+        <div class="row">
+            <div class="col-6">
+                <iframe src="https://player.twitch.tv/?channel=pupuwolf&parent=huzenon.github.io"></iframe>
+                <div>
+                    <img src="https://encrypted-tbn0.gstatic.com/favicon-tbn?q=tbn:ANd9GcSZWjtT1ROSmg_5o2YkogZZgJO9Vj5PEwZOtdkbPttoHnsu5v7S8mm3wq1Lp1JDHMk7DY2K4yJsqQJ8fTM5Kcy60lDSTCZr1xt6XJZE1As" />
+                    <a href="https://www.twitch.tv/pupuwolf" target="_blank">www.twitch.tv/pupuwolf</a>
+                </div>
+                <div>
+                    <img src="https://encrypted-tbn0.gstatic.com/favicon-tbn?q=tbn:ANd9GcTW8Eht4ooW3CRBzkms3c5X_Ec50J2XvH7cnm-htH2yfaiyjEn_ry_v41pvoPdfAhwDKkAxoTmRtQ93wrX-B672Q444vz8AN-2BlSUnWg_J" />
+                    <a href="https://discord.com/invite/n9jW4jsRMq" target="_blank">discord.com/invite/n9jW4jsRMq</a>
+                </div>
+                <div>
+                    大家好 我是笨狼 只是個愛玩遊戲的平凡人<br />
+                    目前主要是做關於POE相關的影片<br />
+                    也嘗試著作各種風格的影片<br />
+                    就這樣啦 謝謝大家<br />
+                </div>
+            </div>
+            <div class="col-6">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/arVlzni8DFE?si=OK97Dw958kA5r2tS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
