--- a/pupuwolf.html
+++ b/pupuwolf.html
@@ -77,33 +77,53 @@
             </li>
         </ul>
         <table v-if="tabIndex==0" class="table table-dark table-striped dark-table">
-            <tr v-for="{name,href} in table1">
-                <td><a :href="href" target="_blank">{{name}}</a></td>
-            </tr>
+            <thead>
+                <tr>
+                    <th colspan="2">
+                        <select v-model="table0filter" class="form-select">
+                            <option value="">全部</option>
+                            <option value="BD">BD</option>
+                            <option value="策略">策略</option>
+                            <option value="小工具">小工具</option>
+                        </select>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="{tag,name,href} in table1">
+                    <td width="100px">{{tag}}</td>
+                    <td><a :href="href" target="_blank">{{name}}</a></td>
+                </tr>
+            </tbody>
         </table>
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script>
-        let { createApp, ref } = Vue;
+        let { createApp, ref, computed } = Vue;
         const app = createApp({
             setup: () => {
-                const tabs = ['小工具', 'POE 1', 'POE 2', '火炬之光'];
+                const tabs = ['POE 1', 'POE 2', '火炬之光'];
                 const tabIndex = ref(0);
                 const tabClick = (index) => {
                     tabIndex.value = index;
                 }
 
-                const table1 = [
-                    { name: 'POB', href: 'https://pathofbuilding.community/' },
-                    { name: 'POE編年史', href: 'https://poedb.tw/tw/' },
-                    { name: 'POE WIKI', href: 'https://www.poewiki.net/wiki/Path_of_Exile_Wiki' },
-                    { name: 'NS過濾器', href: 'https://github.com/neversinkdev/neversink-filter/releases' },
-                    { name: '做裝模擬', href: 'https://www.craftofexile.com/' },
-                    { name: '每日迷宮', href: 'https://www.poelab.com/' },
-                    { name: '各種工具連結', href: 'https://grinding.zone/' },
-                ];
+                const table0filter = ref('');
+                const table1 = computed(() => {
+                    const data = [
+                        { tag: '策略', name: '3.26 超無腦策略 完全無需打怪 40秒一張圖 |一倉地圖40D收益|內附TFT簡單交易流程|', href: 'https://www.youtube.com/watch?v=TB4IyHS5CcE' },
+                        { tag: '小工具', name: 'POB', href: 'https://pathofbuilding.community/' },
+                        { tag: '小工具', name: 'POE編年史', href: 'https://poedb.tw/tw/' },
+                        { tag: '小工具', name: 'POE WIKI', href: 'https://www.poewiki.net/wiki/Path_of_Exile_Wiki' },
+                        { tag: '小工具', name: 'NS過濾器', href: 'https://github.com/neversinkdev/neversink-filter/releases' },
+                        { tag: '小工具', name: '做裝模擬', href: 'https://www.craftofexile.com/' },
+                        { tag: '小工具', name: '每日迷宮', href: 'https://www.poelab.com/' },
+                        { tag: '小工具', name: '各種工具連結', href: 'https://grinding.zone/' },
+                    ];
+                    return data.filter(x => table0filter.value == '' || x.tag == table0filter.value);
+                });
 
-                return { tabs, tabIndex, tabClick, table1 };
+                return { tabs, tabIndex, tabClick, table0filter, table1 };
             }
         }).mount('#app');
     </script>
