--- a/pupuwolf.html
+++ b/pupuwolf.html
@@ -125,6 +125,7 @@
                     ],
                     [],
                     [
+                        { tag: 'BD', name: 'SS9 召二 蜘蛛坦克 機體提升 前往幽邃|700億配置|', href: 'https://www.youtube.com/watch?v=46dMy3Vjqb4' },
                         { tag: '策略', name: 'SS9 刻八穩定收益策略 信標追憶材料大量產生中', href: 'https://www.youtube.com/watch?v=BuVqd0jZ5p0' },
                     ]
                 ]);
